Fix buttons overlapping

--- a/style.css
+++ b/style.css
@@ -45,6 +45,9 @@ a:visited {
     box-shadow: 0px 2px 0 #167095;
     padding: 6px;
     text-decoration: none;
+    display: inline-block;
+    margin: 2px;
+    margin-bottom: 4px;
 
     transition: background-color 0.5s ease;
 }
